--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "concurrently": "^9.1.2",
-    "nodemon": "^3.1.10"
+    "concurrently": "^9.1.2"
   }
 }
