--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "distributed-systems-ca-main",
+  "name": "smart_traffic",
   "version": "1.0.0",
-  "description": "",
-  "main": "auth.js",
+  "main": "app.js",
   "scripts": {
-    "start": "concurrently \"node Ross/server.js\" \"node Ivan/app.js\""
+  "start": "concurrently \"node Ross/server.js\" \"node app.js\" \"node Ivan/weather_server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "@grpc/grpc-js": "^1.13.3",
     "@grpc/proto-loader": "^0.7.15",
